--- a/app/views/installations/admin_views/_index_installations.html.erb
+++ b/app/views/installations/admin_views/_index_installations.html.erb
@@ -1,6 +1,6 @@
 <header class="css-body-header">
   <%= render partial: 'shared/index_page_header',
-             locals: { locals: { title: "Installations(#{locals[:total_installations]}) of #{locals[:bot_info][:name]} into (#{locals[:total_teams]}) teams",
+             locals: { locals: { title: "#{locals[:total_installations]} Installations of #{locals[:bot_info][:name]}, #{locals[:total_teams]} teams.",
                                  pagination_collection: locals[:installations]
                                }
                      }
