--- a/app/views/shared/_index_page_header.html.erb
+++ b/app/views/shared/_index_page_header.html.erb
@@ -10,6 +10,11 @@
 
 <div class="row" style="margin-bottom: 0px; margin-top: 0px; padding-left: 28px;">
   <div class="css-index-top-pagination">
-    <%= will_paginate locals[:pagination_collection] %>
+    <% page_param_name = 'page' unless locals.key?(:page_param_name)
+       page_param_name = locals[:page_param_name] if locals.key?(:page_param_name)
+    %>
+    <%= will_paginate locals[:pagination_collection],
+                      :style => 'margin: 0px; padding: 0px;',
+                      :param_name => page_param_name %>
   </div>
 </div>
