--- a/app/views/teams/admin_views/_show_team.html.erb
+++ b/app/views/teams/admin_views/_show_team.html.erb
@@ -30,8 +30,10 @@
   </div>
 </div>
 
-<% last_activity = '*none*' if locals[:last_activity].nil?
-   last_activity = locals[:last_activity].in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') unless locals[:last_activity].nil?
+<% last_activity_time = '*none*' if locals[:last_active].nil?
+   last_activity_type = '' if locals[:last_active].nil?
+   last_activity_time = locals[:last_active].last_activity_date.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') unless locals[:last_active].nil?
+   last_activity_type = "last_activity_type: \"#{locals[:last_active].last_activity_type}\"" unless locals[:last_active].nil?
 %>
 <div class="row text-left">
   <div class="col-sm-12">
@@ -39,7 +41,7 @@
       <h4>Last Activity:</h4>
     </div>
      <div class="col-sm-9" style="padding-top: 0px;">
-       <h5><%= last_activity %></h5>
+       <h5><%= last_activity_time %></h5>
     </div>
   </div>
 </div>
@@ -70,10 +72,10 @@
   <div class="col-sm-12">
     <div class="col-sm-3">
       <h4><u><%= link_to 'Members', team_members_path(locals[:team]) %></u>
-             <%= " (#{locals[:members].length})" %>:</h4>
+             <%= " (#{locals[:team_members].length})" %>:</h4>
     </div>
      <div class="col-sm-9" style="padding-top: 0px;">
-       <h5><%= "#{locals[:members].map{|member|"@#{member.slack_user_name} "}}" %></h5>
+       <h5><%= "#{locals[:team_members].map{|member|"@#{member.slack_user_name} "}}" %></h5>
     </div>
   </div>
 </div>
@@ -82,10 +84,22 @@
   <div class="col-sm-12">
     <div class="col-sm-3">
       <h4><u><%= link_to 'Channels', team_channels_path(locals[:team]) %></u>
-             <%= " (#{locals[:channels].length})" %>:</h4>
+             <%= " (#{locals[:team_channels].length})" %>:</h4>
     </div>
      <div class="col-sm-9" style="padding-top: 0px;">
-       <h5><%= "#{locals[:channels].map{|channel|"##{channel.slack_channel_name} "}}" %></h5>
+       <h5><%= "#{locals[:team_channels].map{|channel|"##{channel.slack_channel_name} "}}" %></h5>
+    </div>
+  </div>
+</div>
+
+<div class="row text-left">
+  <div class="col-sm-12">
+    <div class="col-sm-3">
+      <h4><u><%= link_to 'Tasks', team_channels_path(locals[:team]) %></u>
+             <%= " (#{locals[:team_list_items].length})" %>:</h4>
+    </div>
+     <div class="col-sm-9" style="padding-top: 0px;">
+       <h5><%= last_activity_type %></h5>
     </div>
   </div>
 </div>
