--- a/app/views/channels/admin_views/_index_member_channel.html.erb
+++ b/app/views/channels/admin_views/_index_member_channel.html.erb
@@ -1,5 +1,24 @@
-<h3>
+<h3 style ="padding-left: 46px; margin-top: 4px;">
   <u><%= link_to "#{locals[:channel].slack_channel_name}", channel_path(locals[:channel]) %></u>
   <%= ": (dbId-#{locals[:channel].id} #{locals[:channel].slack_channel_id})" %>&nbsp;&nbsp;
-  <%= " #{locals[:num_channel_tasks]} #{'Task'.pluralize(locals[:num_channel_tasks])}" %>
+  <%= " #{locals[:num_tasks]} #{'*Task'.pluralize(locals[:num_tasks])}*" %>
 </h3>
+
+<% unless locals[:num_tasks] == 0 %>
+  <%= render partial: 'shared/paginate_page_sub3',
+             locals: { locals: { title: "",
+                                 path: method(:items_path),
+                                 total_records: locals[:num_tasks],
+                                 pagination_collection: locals[:channel_items_paginated],
+                                 page_param_name: 'item_page'
+                               }
+                   }
+  %>
+  <% locals[:channel_items_paginated].each do |item| %>
+    <%= render partial: 'channels/admin_views/index_member_channel_item.html',
+               locals: { locals: { item: item
+                                 }
+                           }
+    %>
+  <% end %>
+<% end %>
