--- a/app/views/users/admin_views/_index_user.html.erb
+++ b/app/views/users/admin_views/_index_user.html.erb
@@ -1,4 +1,5 @@
 <tr>
+  <td><%= ((locals[:page].to_i - 1) * locals[:per_page].to_i) + locals[:index] + 1 %>
   <td><u><%= link_to locals[:user].name,
               user_path(locals[:user]),
               title: "" %></u>
@@ -6,20 +7,6 @@
   <td><%= locals[:user].email %></td>
   <td><%= locals[:user].created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
   <td><%= locals[:last_active].nil? ? '' :locals[:last_active].updated_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></td>
-  <% # Fill in variable number of Slack teams and omniauth_providers
-  next_idx = 0
-  while next_idx < locals[:teams].length || next_idx < locals[:installations].length do
-  %>
-    <%= render partial: 'users/admin_views/index_installation',
-               locals: { locals: { installation: locals[:installations][next_idx] } }
-    %>
-    <%= render partial: 'users/admin_views/index_team',
-               locals: { locals: { installation: locals[:installations][next_idx] } }
-    %>
-    </tr>
-    <tr><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>
-  <% next_idx += 1
-  end
-  %>
-  <td>&nbsp;</td><td>&nbsp;</td>
+  <td><u><%= link_to locals[:num_installations], installations_path %></u></td>
+  <td><u><%= link_to locals[:num_teams], teams_path %></u></td>
 </tr>
