--- a/app/views/channels/admin_views/_index.html.erb
+++ b/app/views/channels/admin_views/_index.html.erb
@@ -1,7 +1,8 @@
 <header class="css-body-header">
-  <%= render partial: 'shared/index_page_header',
-             locals: { locals: { title: "#{locals[:num_channels]} Active #{'channel'.pluralize(locals[:num_channels])} in #{locals[:num_teams]} #{'Team'.pluralize(locals[:num_teams])}",
-                                 pagination_collection: locals[:teams],
+  <%= render partial: 'shared/paginate_page_header',
+             locals: { locals: { title: "#{locals[:num_channels]} Active #{'*channel'.pluralize(locals[:num_channels])}* in #{locals[:num_teams]} #{'Team'.pluralize(locals[:num_teams])}",
+                                 path: method(:teams_path),
+                                 pagination_collection: locals[:teams_paginated],
                                  page_param_name: 'team_page'
                                }
                      }
@@ -10,12 +11,15 @@
 
 <main class="css-body-main">
   <div class="container">
-    <% locals[:teams].each do |installation| %>
+    <% locals[:teams_paginated].each_with_index do |installation, index| %>
       <%= render partial: 'channels/admin_views/index_team',
-                 locals: { locals: { team: installation,
-                                     num_team_channels: Channel.num_team_channels(slack_team_id: installation.slack_team_id),
-                                     num_team_members: Member.num_team_members(slack_team_id: installation.slack_team_id),
-                                     team_members_paginated: Member.team_members(slack_team_id: installation.slack_team_id)
+                 locals: { locals: { index: index,
+                                     per_page: locals[:per_page],
+                                     page: locals[:page],
+                                     team: installation,
+                                     num_team_channels: Channel.num_channels(installation: installation),
+                                     num_team_members: Member.num_members(installation: installation),
+                                     team_members_paginated: Member.members(installation: installation)
                                                                    .paginate(page: params[:member_page], per_page: 1)
                                    }
                          }
