--- a/app/views/members/admin_views/_index_team.html.erb
+++ b/app/views/members/admin_views/_index_team.html.erb
@@ -1,4 +1,4 @@
-<h3><%= "Members(#{locals[:members].length}) for Team" %>
+<h3><%= "#{pluralize(locals[:members].length, '*Member')}* for Team" %>
     <u><%= link_to locals[:team].auth_json['info']['team'],
                    team_path(locals[:team]),
                    title: "Team added #{locals[:team].created_at.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT')}" %></u>
@@ -9,10 +9,9 @@
     <thead>
       <tr>
         <th>Slack User Name</th>
-        <th>Real Name</th>
         <th>Slack User Id</th>
         <th>Installed MiaDo on Date</th>
-        <th>Last Created Task Date (now)<br>(<%= DateTime.current.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %>)</th>
+        <th>Last Created Task Date (type)<br>Now:&nbsp;&nbsp;<%= DateTime.current.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') %></th>
       </tr>
     </thead>
     <tbody>
@@ -22,9 +21,8 @@
                                        installation: Installation.installations(slack_team_id: locals[:team].slack_team_id,
                                                                                 slack_user_id: member['slack_user_id']
                                                                                ).first,
-                                       last_activity: ListItem.last_activity(slack_team_id: locals[:team].slack_team_id,
-                                                                             slack_user_id: member['slack_user_id']
-                                                                            )
+                                       last_active: ListItem.last_active(slack_team_id: locals[:team].slack_team_id,
+                                                                         slack_user_id: member['slack_user_id'])
                                      }
                            }
         %>
