--- a/app/views/teams/admin_views/_index.html.erb
+++ b/app/views/teams/admin_views/_index.html.erb
@@ -1,7 +1,8 @@
 <header class="css-body-header">
-  <%= render partial: 'shared/index_page_header',
-             locals: { locals: { title: "Teams(#{locals[:total_teams]}) whose members have installed MiaDo #{locals[:num_installations]} times.",
-                                 pagination_collection: locals[:teams]
+  <%= render partial: 'shared/paginate_page_header',
+             locals: { locals: { title: "#{pluralize(locals[:num_teams], '*Team')}* whose members have installed MiaDo #{pluralize(locals[:num_installations], 'time')}.",
+                                 path: method(:teams_path),
+                                 pagination_collection: locals[:teams_paginated]
                                }
                      }
   %>
@@ -9,13 +10,16 @@
 
 <main class="css-body-main">
   <div class="container">
-    <% locals[:teams].each do |installation| %>
+    <% locals[:teams_paginated].each_with_index do |installation, index| %>
       <%= render partial: 'teams/admin_views/show_team',
-                 locals: { locals: { team: installation,
-                                     team_members: Member.team_members(slack_team_id: installation.slack_team_id),
-                                     team_channels: Channel.team_channels(slack_team_id: installation.slack_team_id),
-                                     team_list_items: [], # ListItem.team_lists(slack_team_id: installation.slack_team_id),
-                                     installations: Installation.installations(slack_team_id: installation.slack_team_id),
+                 locals: { locals: { index: index,
+                                     per_page: locals[:per_page],
+                                     page: locals[:page],
+                                     team: installation,
+                                     team_members: Member.members(installation: installation),
+                                     team_channels: Channel.channels(installation: installation),
+                                     num_team_items: ListItem.num_items(slack_team_id: installation.slack_team_id),
+                                     num_team_installations: Installation.num_installations(slack_team_id: installation.slack_team_id),
                                      auth_info: installation.auth_json['info'],
                                      auth_extra: installation.auth_json['extra'],
                                      last_active: Channel.last_active(slack_team_id: installation.slack_team_id)
