--- a/app/views/channels/admin_views/_index_member_channel.html.erb
+++ b/app/views/channels/admin_views/_index_member_channel.html.erb
@@ -1,7 +1,15 @@
 <h3 style ="padding-left: 46px; margin-top: 4px;">
-  <u><%= link_to "#{locals[:channel].slack_channel_name}", channel_path(locals[:channel]) %></u>
+  <u><%= link_to "##{locals[:channel].slack_channel_name}", channel_path(locals[:channel]) %></u>
   <%= ": (dbId-#{locals[:channel].id} #{locals[:channel].slack_channel_id})" %>&nbsp;&nbsp;
   <%= " #{locals[:num_tasks]} #{'*Task'.pluralize(locals[:num_tasks])}*" %>
+  <div style="font-size: 16px;">
+  <% last_activity_time = '*none*' if locals[:last_active].nil? || locals[:last_active].last_activity_date.nil?
+     last_activity_type = '' if locals[:last_active].nil? || locals[:last_active].last_activity_date.nil?
+     last_activity_time = locals[:last_active].last_activity_date.in_time_zone("Pacific Time (US & Canada)").strftime('%a %B %e, %Y %l:%M%P - PT') unless locals[:last_active].nil? || locals[:last_active].last_activity_date.nil?
+     last_activity_type = "#{locals[:last_active].last_activity_type}" unless locals[:last_active].nil? || locals[:last_active].last_activity_date.nil?
+  %>
+  Last Activity at:&nbsp;<%= "#{last_activity_time}." %>&nbsp;&nbsp;Type:&nbsp;<%= "\"#{last_activity_type}\"" %>
+</div>
 </h3>
 
 <% unless locals[:num_tasks] == 0 %>
