--- a/app/views/shared/_paginate_page_sub1.html.erb
+++ b/app/views/shared/_paginate_page_sub1.html.erb
@@ -1,19 +1,20 @@
-<div style="padding-left: 20px; margin-top: 6px; margin-bottom: 0px;">
-  <span style="font-size: 14px;">
-    Sort by: &nbsp;
-    <u><%= link_to 'Install Date', locals[:path].call(sortby: 'install_date') %></u>&nbsp;&nbsp;
-    <u><%= link_to 'Alpha', locals[:path].call(sortby: 'alpha') %></u>&nbsp;&nbsp;
-    <u><%= link_to 'Activity', locals[:path].call(sortby: 'activity') %></u>&nbsp;&nbsp;
-  </span>
-  <span style="padding-left: 28px; font-size: 18px; font-weight: bold;">
-    <%= locals[:title] %>
-  </span>
-</div>
-
 <% if locals[:total_records] <= 1 %>
-<br>
+  <div style="padding-left: 18px; font-size: 18px; font-weight: bold;">
+    <%= locals[:title] %>
+  </div>
 <% end %>
 <% unless locals[:total_records] <= 1 %>
+  <div style="padding-left: 20px; margin-top: 6px; margin-bottom: 0px;">
+    <span style="font-size: 14px;">
+      Sort by: &nbsp;
+      <u><%= link_to 'Install Date', locals[:path].call(sortby: 'install_date') %></u>&nbsp;&nbsp;
+      <u><%= link_to 'Alpha', locals[:path].call(sortby: 'alpha') %></u>&nbsp;&nbsp;
+      <u><%= link_to 'Activity', locals[:path].call(sortby: 'activity') %></u>&nbsp;&nbsp;
+    </span>
+    <span style="padding-left: 28px; font-size: 18px; font-weight: bold;">
+      <%= locals[:title] %>
+    </span>
+  </div>
   <div class="row" style="margin-bottom: 0px; margin-top: 0px; padding-left: 34px;">
     <div class="css-index-top-pagination">
       <% page_param_name = 'page' unless locals.key?(:page_param_name)
